--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     {{ content | safe }}
-    <script src="./main.js"></script>
+    <script defer src="./main.bundle.js"></script>
   </body>
 </html>
